<resources>
    <string name="app_name">Hair Advice</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bienvenida">A continuación, vamos a solicitarte una serie de datos
        para evaluar tu tipo de perfil</string>
    <string name="donde_vives">¿Donde vives?</string>
    <string name="provincia">Provincia</string>
    <string name="localidad">Localidad</string>
    <string name="genero">Indicanos a que género referirnos</string>
    <string name="hombre">Hombre</string>
    <string name="mujer">Mujer</string>
    <string name="prefiero_no_especificarlo">No especifico</string>
    <string name="fecha_de_nacimiento">Indica tu fecha de nacimiento</string>
    <string name="apellido">¿Como te apellidas? </string>
    <string name="bienvenido">¡Bienvenido!</string>
    <string name="bienvenido1.2"> Empecemos el registro</string>
    <string name="nombre">¿Cómo te llamas?</string>
    <string name="foto_perfil">Foto de perfil</string>
    <string name="hacer_foto">Hacer una foto</string>
    <string name="foto_galeria">Elegir foto de la galeria</string>
    <string name="text_foto">¡Elige una opción para tu foto de perfil!</string>
    <string name="texto_camara">Hacer foto</string>
    <string name="texto_galeria">Elegir foto</string>
    <string name="texto_sin_foto">Sin foto</string>
    <string name="intermedio2"> A continuación, vamos a solicitarte información para conocer tu tipo de pelo y asesorarte </string>
    <string name="intermedio3">  </string>
    <string name="tinte">¿Tienes el pelo teñido?</string>
    <string name="tinte2">Confirmanos los siguientes datos</string>
    <string name="color_pelo">¿De que color es tu pelo?</string>
    <string name="largo_pelo">Indica el largo de tu pelo</string>
    <string name="texto_muycorto">Muy corto</string>
    <string name="texto_corto">Corto</string>
    <string name="texto_largo">Largo</string>
    <string name="texto_Pmedio">Medio</string>
    <string name="decoloraci_n">Decoloración</string>
    <string name="solo_tinte">Solo tinte</string>
    <string name="txtTipoPelo">Detalla como es tu tipo de pelo</string>
    <string name="TipoPelo">Tipo</string>
    <string name="TexturaPelo">Textura</string>
    <string name="CondicionPelo">Condición</string>
    <string name="txtTratamientoPelo">¿Te has realizado algún tratamiento recientemente?</string>
    <string name="TipoTratamiento">Indicanos cual de los siguientes</string>
    <string name="txtFinRegistro">Indicanos si tienes alguna alergia</string>
    <string name="txtAgradecimientoFinRegistro">¡Hemos finalizado el registro!\n\nMuchas gracias por llegar hasta aqui</string>
    <string name="txtAgradecimientoFinRegistro2">A continuación, accederás a la aplicación </string>
    <string name="texto_bienvenida">Conocerte nos ayudará a brindarte\n
        un servicio único y a tu medida</string>
    <string name="texto_bienvenida2">¡Vamos a crear algo maravilloso juntos!</string>
    <string name="todo">TODO</string>
    <string name="todo2">TODO</string>
    <string name="finalRegistro">¡Hemos terminado el registro!</string>
    <string name="finalRegistro2">A continuación accederas a la aplicación\n\n¡Gracias por llegar hasta aqui!</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="contrase_a">Contraseña</string>
    <string name="repetir_contrase_a_">Repetir contraseña</string>
    <string name="recuperarClave">¿Has olvidado tu contraseña?</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="menu_inicio">Inicio</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_salir"> Salir</string>
    <string name="title_activity_menu_perfil_usuario">Menu Perfil Usuario</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="about">Sobre nosotros</string>
    <string name="recuperacion_clave">Escribe tu correo electrónico</string>
    <string name="send_link_recovery_btn">Enviar correo de recuperación</string>
    <string name="recover_passwd_txtView">Recuperación de contraseña</string>
    <string name="enlace_de_recuperaci_n_enviado">¡Enlace de recuperación enviado!</string>
    <string name="recover_passwd_ver_correo">Buscalo en la bandeja principal de tu correo electrónico</string>
    <string name="recover_passwd_ver_correo2">Si no lo localizas, búscalo en tu bandeja de spam\no correo no deseado</string>
    <string name="txtFinRegistro2">¡Hemos terminado el registro!</string>
    <string name="txtFinRegistro3">En unos segundos accederás a la aplicación</string>
    <string name="fecha_de_nacimiento_perfil">Fecha de Nacimiento</string>
    <string name="ciudad">Ciudad</string>
    <string name="largoPeloPerfil">Largo del pelo</string>
    <string name="colorPeloPerfil">Color del pelo</string>
    <string name="condicionPeloPerfil">Condicion del pelo</string>
    <string name="tintePeloPerfil">Tinte</string>
    <string name="texturaPeloPerfil">Textura del pelo</string>
    <string name="seco">Seco</string>
    <string name="graso">Graso</string>
    <string name="fino">Fino</string>
    <string name="grueso">Grueso</string>
    <string name="alisado">Alisado</string>
    <string name="hidratacion">Hidratación</string>
    <string name="ondas">Ondas</string>
    <string name="no">No</string>
    <string name="tratamitoPeloPerfil">Tratamiento en el pelo</string>
    <string name="menu_home">Home</string>
    <string name="IntroSobreNosotros"> En el mundo actual, los productos cosméticos para el cuidado del cabello son variados y accesibles en innumerables marcas y composiciones, tanto en tiendas físicas como en línea. Sin embargo, la mayoría de las personas no cuentan con el conocimiento adecuado para seleccionar los productos que realmente necesitan para mantener su cabello sano. Nuestra aplicación ha sido desarrollada con el propósito de ofrecer un recurso digital fácil de usar, accesible desde cualquier dispositivo móvil, que permita a los usuarios informarse y adquirir los productos que realmente beneficien su tipo de cabello.
    </string>
    <string name="motivation_title">La Motivación Detrás del Proyecto</string>
    <string name="motivation_content">La idea de esta aplicación surge de la necesidad de brindar a los usuarios una herramienta gratuita y accesible que les permita comprender mejor los componentes de los productos cosméticos que utilizan. Muchos de nosotros hemos experimentado la frustración de comprar un producto que no cumple con nuestras expectativas o, peor aún, que perjudica la salud de nuestro cabello. Con nuestra aplicación, los usuarios pueden escanear el código de barras de cualquier producto cosmético y recibir una evaluación basada en las características específicas de su cabello.</string>
    <string name="mission_title">Nuestra Misión</string>
    <string name="mission_content">Nuestra misión es clara: queremos revolucionar la manera en que las personas eligen y utilizan productos cosméticos para el cabello. La tecnología ha avanzado significativamente en este sector, permitiendo estudios más detallados sobre la estructura del cabello y el desarrollo de productos de alta calidad. Sin embargo, creemos que aún falta una herramienta que combine esta tecnología con una interfaz amigable y accesible para todos. Es por esto que hemos decidido crear una aplicación que no solo sea fácil de usar, sino que también proporcione resultados claros y relevantes sin abrumar al usuario con información técnica innecesaria.</string>
    <string name="features_title">Características de la Aplicación</string>
    <string name="features_content">Nuestra aplicación destaca por varios aspectos únicos que hemos diseñado cuidadosamente:</string>
    <string name="how_to_use_title">Cómo Usar la Aplicación</string>
    <string name="how_to_use_content">El proceso para comenzar a utilizar nuestra aplicación es sencillo y directo. Al registrarse por primera vez, el usuario debe completar un formulario con su información personal y detalles sobre su cabello. Una vez registrado, puede acceder a la pantalla principal de la aplicación donde tendrá la opción de escanear productos utilizando el botón del escáner. Cada producto escaneado será evaluado y clasificado con un sistema de colores que indica su recomendación basada en las características del cabello del usuario. Además, los usuarios pueden revisar su historial de productos escaneados y modificar su perfil en cualquier momento para actualizar la información de su cabello.</string>
    <string name="philosophy_title">Nuestra Filosofía</string>
    <string name="philosophy_content">Creemos firmemente en la importancia de facilitar el acceso a información precisa y relevante para todos. Nuestra aplicación está diseñada con el usuario en mente, buscando mejorar su experiencia y asegurar que puedan tomar decisiones informadas sobre los productos que utilizan en su rutina diaria de cuidado del cabello. Estamos comprometidos con la calidad y la innovación, y esperamos que nuestra aplicación se convierta en una herramienta esencial para todos aquellos que deseen cuidar de su cabello de la mejor manera posible.</string>
    <string name="conclusion_title">Conclusión</string>
    <string name="conclusion_content">Nuestra aplicación es más que una herramienta digital, es un aliado en el cuidado personal. A través de la combinación de tecnología avanzada y una interfaz intuitiva, buscamos empoderar a nuestros usuarios con el conocimiento necesario para seleccionar los mejores productos para su cabello. Invitamos a todos a unirse a nosotros en este viaje hacia un cuidado capilar más informado y personalizado.</string>
    <string name="sobre_nosotros">Sobre Nosotros</string>
    <string name="menu1">Hemos priorizado la simplicidad en la navegación y el uso de la aplicación, asegurándonos de que cualquier persona, independientemente de su familiaridad con la tecnología, pueda utilizarla sin problemas.</string>
    <string name="sobre_nosotros_menu2"> Nos enfocamos en presentar la información de manera que sea fácil de entender, destacando solo los datos relevantes y necesarios.</string>
    <string name="sobre_nosots_menu3">La aplicación está centrada exclusivamente en productos para el cuidado del cabello, como champús y acondicionadores, lo que nos permite ofrecer recomendaciones precisas y especializadas.</string>
    <string name="sbr_nosotros_menu4">La función principal de la aplicación, el escáner de códigos de barras, está siempre accesible desde cualquier pantalla, permitiendo a los usuarios evaluar productos de manera rápida y eficiente.</string>
    <string name="tit_mn1">1. Facilidad de uso:</string>
    <string name="tt_menu2">2. Resultados claros y comprensibles:</string>
    <string name="tit_menu3">3. Especialización en productos capilares:</string>
    <string name="tt_menu4">4. Acceso rápido e intuitivo al escáner:</string>
    <string name="soporte">Soporte</string>
    <string name="soporteTexto">Dudas o incidencias contactar al correo sofia.beltran.calce@gmail.com</string>
</resources>