<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.escaner.ui.InteriorAplicacion.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_sobre_nosotros"
        android:name="com.example.escaner.ui.InteriorAplicacion.sobreNosotros.SobreNosotrosFragment"
        android:label="@string/sobre_nosotros"
        tools:layout="@layout/fragment_sobre_nosotros" />

    <fragment
        android:id="@+id/nav_perfil_user"
        android:name="com.example.escaner.ui.InteriorAplicacion.perfilUsuario.PerfilUsuarioFragment"
        android:label="@string/menu_perfil"
        tools:layout="@layout/fragment_perfil_usuario" />
</navigation>