<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.cardview.widget.CardView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:layout_margin="16dp"
    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="16dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/next8"
                    android:layout_width="82dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="280dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/cardview_shadow_end_color"
                    android:src="@drawable/baseline_chevron_right_24" />

            </LinearLayout>

            <TextView
                android:id="@+id/txtGenero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                android:text="@string/genero"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="20dp" />

            <RadioButton
                android:id="@+id/rBHombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="68dp"
                android:text="@string/hombre"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/rBMujer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="68dp"
                android:text="@string/mujer"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/rBNoEspecifica"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="68dp"
                android:layout_marginBottom="20dp"
                android:text="@string/prefiero_no_especificarlo"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/error3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginBottom="20sp"
                android:text="TextView"
                android:textColor="@color/design_default_color_primary_variant"
                android:visibility="gone" />

        </LinearLayout>

        <!-- You can add an ImageView for the chip or other icons as needed -->
    </RelativeLayout>
</androidx.cardview.widget.CardView>
</layout>