<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.cardview.widget.CardView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:layout_margin="16dp"
    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="16dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/next5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="300dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/cardview_shadow_end_color"
                    android:contentDescription="TODO"
                    android:src="@drawable/baseline_chevron_right_24" />

            </LinearLayout>

            <TextView
                android:id="@+id/txtCiudad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="12dp"
                android:text="@string/donde_vives"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/tv_provincia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Spinner
                android:id="@+id/sp_provincia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:prompt="@string/provincia"
                android:spinnerMode="dropdown" />

            <TextView
                android:id="@+id/tv_localidad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Spinner
                android:id="@+id/sp_localidad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                android:prompt="@string/localidad"
                android:spinnerMode="dropdown" />

            <TextView
                android:id="@+id/txtErrorPronvincia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="20dp"
                android:textColor="@color/design_default_color_primary_variant"
                android:visibility="invisible" />

        </LinearLayout>

    </RelativeLayout>
</androidx.cardview.widget.CardView>
</layout>